--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,17 +1,28 @@
 body {
-  background-color: black;
-  text-align: center;
-}
-h1 {
-  font-family: Verdana;
-  font-weight: normal;
-  font-size: 50px;
-  color: white;
-  text-align: center;
+    font-family: Verdana, sans-serif;
+    text-align: center;
+    background-color: black;
+    color: white;
 }
 
-#elink {
-  font-size: 16px;
-  color: Aquamarine;
-  text-align: center;
+.cta {
+    color: Aquamarine;
+    font-size: 16px;
 }
+
+h1 {
+    font-size: 50px;
+}
+
+h2 {
+    font-size: 42px;
+}
+
+p {
+    color: Gray;
+    font-size: 21px;
+}
+
+.footer {
+    text-align: right;
+} 
